# TruckCompanion

./: .gitignore  .gitmodules  README.md  THIRD-PARTY-NOTICES.md  TruckCompanion.sln
src/TruckCompanion.Api/: Program.cs  TruckCompanion.Api.csproj  appsettings.json
src/TruckCompanion.Api/Configuration/: TelemetryOptions.cs
src/TruckCompanion.Api/Data/: AtsMapData.cs  ats-map.db
src/TruckCompanion.Api/Map/: AtsMapDataService.cs  AtsMapModels.cs  SeedAtsMap.cs  TileMapModels.cs  TileMapService.cs
src/TruckCompanion.Api/Mapping/: GameTelemetrySnapshotMapper.cs
src/TruckCompanion.Api/Models/: Poi.cs  TelemetrySnapshot.cs
src/TruckCompanion.Api/Properties/: launchSettings.json
src/TruckCompanion.Api/Services/: CoordinateProjector.cs  MockTelemetryFactory.cs  TelemetryHub.cs  TelemetryWorker.cs
src/TruckCompanion.MapImport/: Program.cs  TruckCompanion.MapImport.csproj
src/TruckCompanion.TelemetryPlugin/: CMakeLists.txt  README.md
src/TruckCompanion.TelemetryPlugin/include/: truckcompanion_shared_memory.h
src/TruckCompanion.TelemetryPlugin/src/: truckcompanion_telemetry.cpp
src/TruckCompanion.TileGenerator/: Program.cs  TruckCompanion.TileGenerator.csproj
src/TruckCompanion.Web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
src/TruckCompanion.Web/public/: manifest.webmanifest  service-worker.js
src/TruckCompanion.Web/src/: App.tsx  main.tsx  types.ts
tools/: build-telemetry-plugin.ps1  generate-ats-tiles.ps1  install-ats-plugin.ps1  restart-map.ps1  setup-map-tools.ps1
(+10 files in other folders)
